# optsort

./: Cargo.toml  README.md  decision_tree.py  main.py  ordering.py  tests.ipynb
benches/: benchmark.rs
src/: lib.rs  main.rs  partial_order.rs  permutation.rs
src/graph/: connected_components.rs  core.rs  isomorphism.rs  mod.rs  topological.rs
src/output/: mod.rs  optsort.rs
